Dishes hissesi hazirdir

--- a/home.html
+++ b/home.html
@@ -111,6 +111,107 @@
     </div>
     </section>
     
+    <section class="dishes">
+        <div class="dishes-head">
+            <h1>DISHES</h1>
+            <h2>Dish Of The Day</h2>
+            <hr>
+        </div>
+        <div class="dishes-grid">
+            <div class="dishes-card">
+                <img  src="images/resim1.jpg" alt="">
+                <div class="dishes-title">
+                    <h1>Featured Meal</h1>
+                    <p>Served with french fries + drink</p>
+                </div>
+                
+                <p>Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper patty, Add Tender crisp patty and more...</p>
+                <div class="dishes-star">
+                    <div>
+                        <img src="images/stars.png" alt="">
+                        <p>12</p>
+                    </div>
+                    <button>ORDER</button>
+                </div>
+            </div>    
+            <div class="dishes-card">
+                <img  src="images/resim2.jpg" alt="">
+                <div class="dishes-title">
+                    <h1>Featured Meal</h1>
+                    <p>Served with french fries + drink</p>
+                </div>
+                <p>Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper patty, Add Tender crisp patty and more...</p>
+                <div class="dishes-star">
+                    <div>
+                        <img src="images/stars (1).png" alt="">
+                        <p>12</p>
+                    </div>
+                    <button>ORDER</button>
+                </div>
+            </div>
+            <div class="dishes-card">
+                <img  src="images/resim3.jpg" alt="">
+                <div class="dishes-title">
+                    <h1>Featured Meal</h1>
+                    <p>Served with french fries + drink</p>
+                </div>
+                <p>Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper patty, Add Tender crisp patty and more...</p>
+                <div class="dishes-star">
+                    <div>
+                        <img src="images/stars (1).png" alt="">
+                        <p>12</p>
+                    </div>
+                    <button>ORDER</button>
+                </div>
+            </div>
+            <div class="dishes-card">
+                <img  src="images/resim4.jpg" alt="">
+                <div class="dishes-title">
+                    <h1>Featured Meal</h1>
+                    <p>Served with french fries + drink</p>
+                </div>
+                <p>Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper patty, Add Tender crisp patty and more...</p>
+                <div class="dishes-star">
+                    <div>
+                        <img src="images/stars (1).png" alt="">
+                        <p>12</p>
+                    </div>
+                    <button>ORDER</button>
+                </div>
+            </div>
+            <div class="dishes-card">
+                <img  src="images/resim5.jpg" alt="">
+                <div class="dishes-title">
+                    <h1>Featured Meal</h1>
+                    <p>Served with french fries + drink</p>
+                </div>
+                <p>Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper patty, Add Tender crisp patty and more...</p>
+                <div class="dishes-star">
+                    <div>
+                        <img src="images/stars (1).png" alt="">
+                        <p>12</p>
+                    </div>
+                    <button>ORDER</button>
+                </div>
+            </div>
+            <div class="dishes-card">
+                <img  src="images/resim6.jpg" alt="">
+                <div class="dishes-title">
+                    <h1>Featured Meal</h1>
+                    <p>Served with french fries + drink</p>
+                </div>
+                <p>Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper patty, Add Tender crisp patty and more...</p>
+                <div class="dishes-star">
+                    <div>
+                        <img src="images/stars.png" alt="">
+                        <p>12</p>
+                    </div>
+                    <button>ORDER</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </header>
 </body>
 </html>
