Dishes bezi deyisikler

--- a/home.html
+++ b/home.html
@@ -119,12 +119,12 @@
         </div>
         <div class="dishes-grid">
             <div class="dishes-card">
+                <img class="img-icon" src="images/2. Black 30%.png" alt="">
                 <img  src="images/resim1.jpg" alt="">
                 <div class="dishes-title">
                     <h1>Featured Meal</h1>
                     <p>Served with french fries + drink</p>
                 </div>
-                
                 <p>Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper patty, Add Tender crisp patty and more...</p>
                 <div class="dishes-star">
                     <div>
@@ -135,6 +135,7 @@
                 </div>
             </div>    
             <div class="dishes-card">
+                <img class="img-icon" src="images/2. Black 30%.png" alt="">
                 <img  src="images/resim2.jpg" alt="">
                 <div class="dishes-title">
                     <h1>Featured Meal</h1>
@@ -150,6 +151,7 @@
                 </div>
             </div>
             <div class="dishes-card">
+                <img class="img-icon" src="images/2. Black 30%.png" alt="">
                 <img  src="images/resim3.jpg" alt="">
                 <div class="dishes-title">
                     <h1>Featured Meal</h1>
@@ -165,6 +167,7 @@
                 </div>
             </div>
             <div class="dishes-card">
+                <img class="img-icon" src="images/2. Black 30%.png" alt="">
                 <img  src="images/resim4.jpg" alt="">
                 <div class="dishes-title">
                     <h1>Featured Meal</h1>
@@ -180,6 +183,7 @@
                 </div>
             </div>
             <div class="dishes-card">
+                <img class="img-icon" src="images/2. Black 30%.png" alt="">
                 <img  src="images/resim5.jpg" alt="">
                 <div class="dishes-title">
                     <h1>Featured Meal</h1>
@@ -195,6 +199,7 @@
                 </div>
             </div>
             <div class="dishes-card">
+                <img class="img-icon" src="images/2. Black 30%.png" alt="">
                 <img  src="images/resim6.jpg" alt="">
                 <div class="dishes-title">
                     <h1>Featured Meal</h1>
