--- a/home.html
+++ b/home.html
@@ -119,6 +119,7 @@
         </div>
         <div class="dishes-grid">
             <div class="dishes-card">
+                <img class="img-icon" src="images/2. Black 30%.png" alt="">
                 <img  src="images/resim1.jpg" alt="">
                 <div class="dishes-title">
                     <h1>Featured Meal</h1>
@@ -135,6 +136,7 @@
                 </div>
             </div>    
             <div class="dishes-card">
+                <img class="img-icon" src="images/2. Black 30%.png" alt="">
                 <img  src="images/resim2.jpg" alt="">
                 <div class="dishes-title">
                     <h1>Featured Meal</h1>
@@ -150,6 +152,7 @@
                 </div>
             </div>
             <div class="dishes-card">
+                <img class="img-icon" src="images/2. Black 30%.png" alt="">
                 <img  src="images/resim3.jpg" alt="">
                 <div class="dishes-title">
                     <h1>Featured Meal</h1>
@@ -165,6 +168,7 @@
                 </div>
             </div>
             <div class="dishes-card">
+                <img class="img-icon" src="images/2. Black 30%.png" alt="">
                 <img  src="images/resim4.jpg" alt="">
                 <div class="dishes-title">
                     <h1>Featured Meal</h1>
@@ -180,6 +184,7 @@
                 </div>
             </div>
             <div class="dishes-card">
+                <img class="img-icon" src="images/2. Black 30%.png" alt="">
                 <img  src="images/resim5.jpg" alt="">
                 <div class="dishes-title">
                     <h1>Featured Meal</h1>
@@ -195,6 +200,7 @@
                 </div>
             </div>
             <div class="dishes-card">
+                <img class="img-icon" src="images/2. Black 30%.png" alt="">
                 <img  src="images/resim6.jpg" alt="">
                 <div class="dishes-title">
                     <h1>Featured Meal</h1>
