Chefs hissesi hazirdir

--- a/home.html
+++ b/home.html
@@ -218,6 +218,62 @@
         </div>
     </section>
 
+    <section class="chef">
+        <div class="chef-title">
+            <h1>CHEFS</h1>
+            <h2>This Month's Chefs</h2>
+            <hr>
+        </div>
+        <div class="chef-body">
+            <div class="chef-card">
+                <div class="chef-card-title">
+                    <img src="images/Avatar.jpg" alt="">
+                    <div class="chef-name">
+                        <h4>Gregory Flores</h4>
+                        <p>Chef of the cold</p>
+                    </div>
+                </div>
+                <div class="chef-img">
+                    <img src="images/big img.jpg" alt="">
+                    <img src="images/img 2.jpg" alt="">
+                    <img src="images/img 3.jpg" alt="">
+                </div>
+            </div>
+            <div class="chef-card">
+                <div class="chef-card-title">
+                    <img src="images/Avatar (1).jpg" alt="">
+                    <div class="chef-name">
+                        <h4>Annette Cooper</h4>
+                        <p>Chef of the hot</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="chef-img">
+                        <img src="images/big img (1).jpg" alt="">
+                        <img src="images/img 2 (1).jpg" alt="">
+                        <img src="images/img 3 (1).jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="chef-card">
+                <div class="chef-card-title">
+                    <img src="images/Avatar (2).jpg" alt="">
+                    <div class="chef-name">
+                        <h4>Greg Fox</h4>
+                        <p>Сhef macro kitchen</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="chef-img">
+                        <img src="images/big img (2).jpg" alt="">
+                        <img src="images/img 2 (2).jpg" alt="">
+                        <img src="images/img 3.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </header>
 </body>
 </html>
