--- a/home.html
+++ b/home.html
@@ -274,6 +274,78 @@
         </div>
     </section>
 
+    <section class="recipe">
+        <div class="recipe-title">
+            <h1>RECIPES</h1>
+            <h2>Recipes From Our Chefs</h2>
+            <hr>
+        </div>
+        <div class="recipe-grid">
+            <div class="recipe-breakfast">
+                <img class="img-icon" src="images/1. White.png" alt="">
+                <div class="card">
+                    <h4>BREAKFAST</h4>
+                    <p>05 Jul 2016</p>
+                    <p class="text">Lorem ipsum dolor sit amet,<br><br> consectetur adipiscing elit</p>
+                    <p>Jason Keller</p>
+                </div>
+                <div class="recipe-icon">
+                    <img src="images/ic_remove_red_eye.png" alt="">
+                    <p>275</p>
+                    <img src="images/ic_question_answer.png" alt="">
+                    <p>12</p>
+                </div>
+            </div>
+            <div class="recipe-right">
+                <div class="recipe-lunch">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br><br> eiusmod tempor incididunt ut</p>
+                    <div class="recipe-body">
+                        <div>
+                            <h4>LUNCH</h4>
+                            <p>07 Jan 2016</p>
+                        </div>
+                        <div>
+                            <img src="images/ic_remove_red_eye.png" alt="">
+                            <p>275</p>
+                            <img src="images/ic_question_answer.png" alt="">
+                            <p>12</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="recipe-dinner">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br><br> eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    <div class="recipe-body">
+                        <div>
+                            <h4>DINNER</h4>
+                            <p>07 Jan 2016</p>
+                        </div>
+                        <div>
+                            <img src="images/ic_remove_red_eye.png" alt="">
+                            <p>275</p>
+                            <img src="images/ic_question_answer.png" alt="">
+                            <p>12</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="recipe-sweet">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br><br> eiusmod tempor incididunt</p>
+                    <div class="recipe-body">
+                        <div>
+                            <h3>SWEETS</h3>
+                            <p>07 Jan 2016</p>
+                        </div>
+                        <div>
+                            <img src="images/black.png" alt="">
+                            <p>275</p>
+                            <img src="images/answer.png" alt="">
+                            <p>12</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </header>
 </body>
 </html>
