--- a/home.html
+++ b/home.html
@@ -17,15 +17,15 @@
             </div>
             <div class="nav-link">
                 <ul>
-                    <li><a href="">Menu</a></li>
-                    <li><a href="">Recipes</a></li>
-                    <li><a href="">Chefs</a></li>
-                    <li><a href="">Contacts</a></li>
+                    <li><a href="#menu">Menu</a></li>
+                    <li><a href="#recipes">Recipes</a></li>
+                    <li><a href="#chefs">Chefs</a></li>
+                    <li><a href="#contacts">Contacts</a></li>
                 </ul>
             </div>
         </nav>
 
-        <main> 
+        <main id="menu"> 
             <div class="main-card">
             <div class="main-body">
                 <h1> <span>Your</span>  Favourite Food <br>
@@ -218,7 +218,7 @@
         </div>
     </section>
 
-    <section class="chef">
+    <section class="chef" id="chefs">
         <div class="chef-title">
             <h1>CHEFS</h1>
             <h2>This Month's Chefs</h2>
@@ -274,7 +274,7 @@
         </div>
     </section>
 
-    <section class="recipe">
+    <section class="recipe" id="recipes">
         <div class="recipe-title">
             <h1>RECIPES</h1>
             <h2>Recipes From Our Chefs</h2>
@@ -341,6 +341,63 @@
                             <p>12</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="social">
+        <div class="social-title">
+            <h1>SOCIAL</h1>
+            <h2>We in Social</h2>
+            <hr>
+        </div>
+        <div class="social-grid">
+            <div class="social-card">
+                <div class="social-card-head">
+                    <div>
+                        <img src="images/Twitter.jpg" alt="">
+                        <h2>Twitter</h2>
+                    </div>
+                    <button>FOLLOW US</button>
+                </div>
+                <hr>
+                <div class="social-card-text">
+                    <p>24 Jun at 16:20 pm</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur <br><br> adipiscing elit, sed do eiusmod tempor <br><br> incididunt ut Lorem ipsum dolor sit amet,<br><br> consectetur adipiscing</p>
+                    <a href="">@DennisFerguson</a>
+                </div>
+            </div>
+            <div class="social-card">
+                <div class="social-card-head">
+                    <div>
+                        <img src="images/Instagram.jpg" alt="">
+                        <h2>Instagram</h2>
+                    </div>
+                    <button>FOLLOW US</button>
+                </div>
+                <img class="img-icon" src="images/2. Black 30%.jpg" alt="">
+                <div class="social-img">
+                    <img src="images/images1.jpg" alt="">
+                    <img src="images/images2.jpg" alt="">
+                    <img src="images/images3.jpg" alt="">
+                    <img src="images/images4.jpg" alt="">
+                    <img src="images/images5.jpg" alt="">
+                    <img src="images/images6.jpg" alt="">
+                </div>
+            </div>
+            <div class="social-card">
+                <div class="social-card-head">
+                    <div>
+                        <img src="images/Facebook.jpg" alt="">
+                        <h2>Facebook</h2>
+                    </div>
+                    <button>FOLLOW US</button>
+                </div>
+                <hr>
+                <div class="social-card-text">
+                    <p>26 Jun at 16:20 pm</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur <br><br> adipiscing elit, sed do eiusmod tempor <br><br> incididunt ut Lorem ipsum dolor sit amet,<br><br> consectetur adipiscing</p>
                 </div>
             </div>
         </div>
