--- a/home.html
+++ b/home.html
@@ -403,6 +403,31 @@
         </div>
     </section>
 
+    <footer>
+        <div class="footer-contact">
+            <div class="footer-card">
+                <img src="images/ic_watch_later.png" alt="">
+                <h3>Today 10:00 am - 7:00 pm</h3>
+                <p>Working hours</p>
+            </div>
+            <div class="footer-card">
+                <img src="images/ic_near_me.png" alt="">
+                <h3>Velyka Vasylkivska 100</h3>
+                <p>Get Directions</p>
+            </div>
+            <div class="footer-card" >
+                <img src="images/ic_call.png" alt="">
+                <h3>+38 (063)833 24 15</h3>
+                <p>Call Online</p>
+            </div>
+        </div>
+        <hr>
+        <div class="footer-img">
+            <img class="img-logo" src="images/Logo.png" alt="image-logo">
+            <img class="img-logo-text" src="images/HEALTHY SWITCHER.png" alt="image-logo-text">
+        </div>
+        <p>© Designed by Yellow Snow. All Rights Reserved.</p>
+    </footer>
 </header>
 </body>
 </html>
