--- a/home.html
+++ b/home.html
@@ -15,12 +15,15 @@
                 <img class="img-logo" src="images/Logo.png" alt="image-logo">
                 <img class="img-logo-text" src="images/HEALTHY SWITCHER.png" alt="image-logo-text">
             </div>
+            <input type="checkbox" id="active">
+            <label for="active" class="menu-btn"><span></span></label>
+            <label for="active" class="close"></label>
             <div class="nav-link">
                 <ul>
                     <li><a href="#menu">Menu</a></li>
                     <li><a href="#recipes">Recipes</a></li>
                     <li><a href="#chefs">Chefs</a></li>
-                    <li><a href="#contacts">Contacts</a></li>
+                    <li><a href="#contact">Contacts</a></li>
                 </ul>
             </div>
         </nav>
@@ -68,8 +71,8 @@
             </div>
             
         <div class="about-img">
-            <img src="images/placeholder (1).png" alt="">
-            <img src="images/placeholder (2).png" alt="">
+            <img class="img-left" src="images/placeholder (1).png" alt="">
+            <img class="img-right" src="images/placeholder (2).png" alt="">
         </div> 
         <div>
             <button class="about-btn">
@@ -313,7 +316,7 @@
                     </div>
                 </div>
                 <div class="recipe-dinner">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br><br> eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    <p class="recipe-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br><br> eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     <div class="recipe-body">
                         <div>
                             <h4>DINNER</h4>
@@ -422,7 +425,7 @@
             </div>
         </div>
         <hr>
-        <div class="footer-img">
+        <div class="footer-img" id="contact">
             <img class="img-logo" src="images/Logo.png" alt="image-logo">
             <img class="img-logo-text" src="images/HEALTHY SWITCHER.png" alt="image-logo-text">
         </div>
